welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (pas <- 0 to 3  ) {
    if (nums(pas)==lookingFor){
      return pas
    }else {
      return -1
    }
    }
  }
